--- a/Swift3/scratchy/scratchy/Third.storyboard
+++ b/Swift3/scratchy/scratchy/Third.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zwV-67-V4B">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1421" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="wgx-Me-5sH">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -68,6 +68,7 @@
                     <connections>
                         <outlet property="mapContainer" destination="fmZ-wL-QpZ" id="2St-IA-0LR"/>
                         <outlet property="tableContainer" destination="qmR-rO-we7" id="P6o-fu-yAD"/>
+                        <outlet property="theSegControl" destination="eOF-sB-qc1" id="98y-Og-abs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AzR-vr-oXY" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -77,7 +78,7 @@
         <!--ContainerA View Controller-->
         <scene sceneID="SE6-9O-G9o">
             <objects>
-                <viewController id="msc-gW-2S1" customClass="ContainerAViewController" customModule="scratchy" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="componentA" id="msc-gW-2S1" customClass="ContainerAViewController" customModule="scratchy" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="L0P-d0-KqA"/>
                         <viewControllerLayoutGuide type="bottom" id="jJT-u7-JiD"/>
@@ -93,7 +94,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="Ja2-6z-enw" firstAttribute="centerY" secondItem="DdW-p5-qOR" secondAttribute="centerY" id="gEb-I5-Ium"/>
                             <constraint firstItem="Ja2-6z-enw" firstAttribute="centerX" secondItem="DdW-p5-qOR" secondAttribute="centerX" id="psz-QI-YeO"/>
@@ -110,7 +111,7 @@
         <!--ContainerB View Controller-->
         <scene sceneID="ISa-I7-Keh">
             <objects>
-                <viewController id="r31-MD-rxN" customClass="ContainerBViewController" customModule="scratchy" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="componentB" id="r31-MD-rxN" customClass="ContainerBViewController" customModule="scratchy" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="5de-ys-i9y"/>
                         <viewControllerLayoutGuide type="bottom" id="Yza-Rd-Xts"/>
@@ -126,7 +127,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="b0I-lH-dVq" firstAttribute="centerY" secondItem="fXb-vL-1tm" secondAttribute="centerY" id="V4Y-CJ-8If"/>
                             <constraint firstItem="b0I-lH-dVq" firstAttribute="centerX" secondItem="fXb-vL-1tm" secondAttribute="centerX" id="iY2-Zl-e1t"/>
